# Mod-Assets-Geometry

./: CMakeLists.txt  README.md
source/: CGeneratorGeometry.cpp  CGeneratorGeometry.hpp  Common.cpp  Common.hpp  GeometryLibrary.cpp  GeometryLibrary.hpp  MContent.cpp  Mesh.cpp  Mesh.hpp  MeshLibrary.cpp  MeshLibrary.hpp  Model.cpp  Model.hpp  OBJ.cpp  OBJ.hpp  Tools.hpp
source/generators/: Box.cpp  Box.inl  Cylinder.cpp  Cylinder.inl  Foliage.inl  Frustum.cpp  Frustum.inl  Grid.cpp  Grid.hpp  Grid.inl  Label.inl  Line.cpp  Line.inl  Rectangle.cpp  Rectangle.inl  Sphere.cpp  Sphere.inl  Text.cpp  Text.inl  Tree.cpp  Triangle.cpp  Triangle.inl  Zode.cpp  Zode.inl
test/: CMakeLists.txt  Main.cpp  Main.hpp  TestGeometry.cpp
test/data/: credit.txt  maxwell.mtl
